# HmMediaSDK

./: .gitmodules  README.md
Andriod/app/: build.gradle
Andriod/app/src/main/: AndroidManifest.xml
Andriod/app/src/main/cpp/: CMakeLists.txt  HmSdkUpload.cpp  HmSdkUpload.h  native-lib.cpp
Andriod/app/src/main/java/com/harman/hmmediasdkapp/: HmLibrary.java  HmLibraryActivity.java  MainActivity.java  UploadProgress.java
Andriod/app/src/main/res/layout/: activity_main.xml
Andriod/app/src/main/res/values/: strings.xml
Andriod/gradle/wrapper/: gradle-wrapper.properties
Andriod_AAR/app/: local.properties
Andriod_AAR/app/gradle/wrapper/: gradle-wrapper.properties
Andriod_AAR/app/src/main/cpp/: CMakeLists.txt  Common.h
Andriod_AAR/app/src/main/java/com/harman/hmmediasdkapp/: HmLibrary.java
Andriod_APK/app/src/androidTest/java/com/harman/hmmediasdkapp/: ExampleInstrumentedTest.java
Andriod_APK/app/src/main/cpp/: HmSdkUpload.cpp  HmSdkUpload.h  native-lib.cpp
Andriod_APK/app/src/main/java/com/harman/hmmediasdkapp/: FileUploadListener.java  HmLibraryActivity.java
Andriod_APK/app/src/test/java/com/harman/hmmediasdkapp/: ExampleUnitTest.java
Android_Test_Application/: settings.gradle
Android_Test_Application/HmUploadSdk/: HmUploadSdk.aar  build.gradle
Android_Test_Application/app/: build.gradle
Android_Test_Application/app/src/main/: AndroidManifest.xml
Android_Test_Application/app/src/main/java/com/harman/testsdk/: MainActivity.kt
Android_Test_Application/app/src/main/res/layout/: activity_main.xml
HmMediaSDKApp/: settings.gradle
HmMediaSDKApp/app/: build.gradle
HmMediaSDKApp/app/src/main/: AndroidManifest.xml
HmMediaSDKApp/app/src/main/cpp/: HmSdkUpload.h  native-lib.cpp
HmMediaSDKApp/app/src/main/java/com/harman/hmmediasdkapp/: MainActivity.java
HmMediaSDKApp/gradle/wrapper/: gradle-wrapper.properties
HmMediaSDKIOS/: HmSdkUpload.cpp  HmSdkUpload.h  Makefile  main.cpp
HmMediaSdkTest/gradle/wrapper/: gradle-wrapper.properties
IOS/: CMakeLists.txt  HmSdkUpload.cpp  HmSdkUpload.h  Makefile  main.cpp
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary.xcodeproj/: project.pbxproj
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary.xcodeproj/project.xcworkspace/xcuserdata/Nidhi.xcuserdatad/: UserInterfaceState.xcuserstate
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary.xcodeproj/xcuserdata/Nidhi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary.xcodeproj/xcuserdata/Nidhi.xcuserdatad/xcschemes/: xcschememanagement.plist
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary/Base.lproj/: Main.storyboard
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary/Frameworks/HmLibrary.framework/: HmLibrary  Info.plist
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary/Frameworks/HmLibrary.framework/Headers/: HmLibrary-Swift.h  HmLibrary.h  HmSdkUpload.h  HmSdkWrapper.h
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary/Frameworks/HmLibrary.framework/Modules/: module.modulemap
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary/Frameworks/HmLibrary.framework/Modules/HmLibrary.swiftmodule/: arm64.swiftdoc  arm64.swiftmodule
IOS/iPhone/iOS/GUI/SampleApp_HmLibrary/SampleApp_HmLibrary/Frameworks/HmLibrary.framework/_CodeSignature/: CodeResources
Test_AAR/: settings.gradle
Test_AAR/HmMediaSdk/: build.gradle
Test_AAR/app/: build.gradle
Test_AAR/app/src/main/: AndroidManifest.xml
Test_AAR/app/src/main/res/layout/: activity_main.xml
Test_AAR/app/src/main/res/values/: strings.xml
(+4 files in other folders)
